--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "cluster": "^0.7.7",
     "connect-mongodb-session": "^5.0.0",
     "connect-session-sequelize": "^7.1.7",
@@ -17,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.2",
     "nodemon": "^3.1.4",
     "sequelize": "^6.37.3"
