--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,7 @@ FRONT=http://localhost:5173
 CN=dzr2ad20j
 AK=962966647957195
 AS=IDaqPTZg9iohKrpZ5_S_twIPvYQ
+MHOST=sandbox.smtp.mailtrap.io
+MPORT=25
+MUSER=f05923e4b329d3
+MPASS=49e761a92b15c3
