--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@emailjs/nodejs": "^4.0.4",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
     "cluster": "^0.7.7",
@@ -20,6 +21,7 @@
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.2",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "sequelize": "^6.37.3"
   }
